--- a/wave-plots.html
+++ b/wave-plots.html
@@ -656,7 +656,7 @@ WavesRenderer.prototype._deal_with_modified_okeys = function(okeys_modified){
                 this._okey_to_part_rendered.delete(okey);
             }
             results.set(okey, this._okey_to_rendered.get(okey).el_canv);
-        } if (!this._okey_to_part_rendered.has(okey)){
+        } else if (!this._okey_to_part_rendered.has(okey)){
             // this is different to the last thing we renderd, and we weren't
             // previously planning on rendering it. So need to render from scratch
             let part = {
@@ -1035,16 +1035,15 @@ Polymer({
         }
     }, _palette_mode_changed: function(){
         this._renderer.set_mode(this.palette_mode);
-    }, _update_okeys: function(okeys_to_remove, okeys_to_add){
+    }, _update_okeys: function(okeys_to_remove, okeys_to_add, okeys_to_update){
         // free canvases, it's our responsiblity to do this, whereas 
         // freeing the inds arrays was the responsibility of cut-obj.
         for(let okey of okeys_to_remove) if(okey && okey.waves){
             okey.waves = null; // Note we don't both to use the Polymer .set machienery, because the okey is being (at least temporarily) discarded
         }
-        okeys_to_add = okeys_to_add.filter(function(okey){
-            return okey ? 1 : 0;
-        });
-        this._renderer.update_okeys(okeys_to_remove, okeys_to_add, []); 
+        okeys_to_add = okeys_to_add.filter((okey) => !!okey);
+        okeys_to_update = okeys_to_update.filter((okey) => !!okey);
+        this._renderer.update_okeys(okeys_to_remove, okeys_to_add, okeys_to_update); 
 
     }, _groups_set: function(new_val, old_val){
         this.groups_collection = Array.isArray(new_val) && Polymer.Collection.get(new_val);
