managed-canvas with content

--- a/cut-object.html
+++ b/cut-object.html
@@ -354,6 +354,9 @@
                     speed: null
                 },
 
+                // the array of markers rendered on the spa rm
+                markers: [],
+
                 // private properties for use by tac-plots module, never notified
                 _tac_other: null,
                 _tac_other_options: {},
