--- a/cluster-plots.html
+++ b/cluster-plots.html
@@ -439,7 +439,12 @@ bottom: 0px;
 .grabber:hover{
 @apply(--grabber-hover);
 }
-
+.x_axis_label{
+@apply(--cluster-x-axis-label);
+}
+.y_axis_label{
+@apply(--cluster-y-axis-label);
+}
 </style>
 
 <template>
@@ -484,13 +489,14 @@ bottom: 0px;
         <div style="position: absolute; top:0; left:0; right:0; bottom: 0;overflow-y: scroll;" on-scroll="_update_scrolled_down">
             <template is="dom-repeat" items="[[cluster_plots]]">
                 <div class="plot" style$="{{_show(item.is_used)}}">
-                    <canvas-with-axes 
+                    <managed-canvas
                         ckey="[[item.ckey]]"
-                        x_label="[[item.x_axis]]"
-                        y_label="[[item.y_axis]]" 
                         fix_height="[[canvas_size]]"
                         on-canvas-mousemove="_mousemove_canvas" 
-                        on-mouseleave="_mouseleave_canvas"></canvas-with-axes>
+                        on-mouseleave="_mouseleave_canvas">
+                            <div class="x_axis_label">[[item.x_axis]]</div>
+                            <div class="y_axis_label">[[item.y_axis]]</div>
+                    </managed-canvas>
                 </div>
             </template>
         </div>
