--- a/managed-canvas.html
+++ b/managed-canvas.html
@@ -1,7 +1,20 @@
 <link rel="import" href="bower_components/polymer/polymer.html">
 
 <dom-module id="managed-canvas">
-<template></template>
+<style>
+:host{
+position: relative;
+display: inline-block;
+}
+:host ::content{
+position: absolute;
+top: 0px;
+left: 0px;
+width: 100%;
+height: 100%;
+}
+</style>
+<template><content id="the_content"></content></template>
 <script>
 "use strict";
 
@@ -12,17 +25,15 @@ Polymer({
             type: Object,
             value: "",
             observer: '_update'
-        },
-        fix_height: {
+        }, fix_height: {
             type: Number,
             value: 0,
             observer: '_update_canv_style'
-        },
-        stretch_height: {
+        }, stretch_height: {
             type: Boolean,
             value: false,
             observer: '_update_canv_style'
-        },flip_horizontal: {
+        }, flip_horizontal: {
             type: Boolean,
             notify: true,
             value: false,
@@ -36,10 +47,10 @@ Polymer({
         this.style.display = '';
         if(ckey && ckey.canvas){
             // an actual canvas, so remove any existing one and slot in this one  
-            if(this._canv_el && this._canv_el === Polymer.dom(this.root).firstChild){
+            if(this._canv_el && this._canv_el === Polymer.dom(this.$.the_content).previousSibling){
                 Polymer.dom(this.root).removeChild(this._canv_el);
             }
-            Polymer.dom(this.root).appendChild(ckey.canvas);
+            Polymer.dom(this.root).insertBefore(ckey.canvas, this.$.the_content);
             this._canvas_is_from_ckey = true; // so we cant overwrite its contents in future
             this._canv_el = ckey.canvas;
             this._update_canv_style();
@@ -51,12 +62,12 @@ Polymer({
                 // can't overwrite the old canvas (or there never was one), so make a new one
 
                 // remove the old one (if it's still in our local dom)
-                if(this._canv_el && this._canv_el === Polymer.dom(this.root).firstChild){
+                if(this._canv_el && this._canv_el === Polymer.dom(this.$.the_content).previousSibling){
                     Polymer.dom(this.root).removeChild(this._canv_el);
                 }
 
                 this._canv_el = document.createElement('canvas');
-                Polymer.dom(this.root).appendChild(this._canv_el);
+                Polymer.dom(this.root).insertBefore(this._canv_el, this.$.the_content);
                 this._canvas_is_from_ckey = false; // so in future you can overwrite the data if you want
             }
 
@@ -100,7 +111,6 @@ Polymer({
         }
         el_canv.style.imageRendering = "pixelated";  
         this.transform(this.flip_horizontal ? 'scaleX(-1)' : '', el_canv);
-
     }, _onmousemove: function(e){
         this._fire_pointer_event(e, 'canvas-mousemove');
     }, _onmouseup: function(e){
@@ -129,64 +139,3 @@ Polymer({
 </script>
 </dom-module>
 
-
-
-<dom-module id="canvas-with-axes">
-<style>
-:host{
-display: inline-block;
-position: relative;
-}
-.x_axis_label{
-position: absolute;
-display: inline-block;
-bottom: 2px;
-right: 2px;
-font-size: 10px;
-}
-.y_axis_label{
-position: absolute;
-display: inline-block;
-left: 2px;
-top: 2px;
-font-size: 10px;
-}
-</style>
-<template>
-    <managed-canvas ckey="[[ckey]]" fix_height="[[fix_height]]" id="the_canvas" flip_horizontal="[[flip_horizontal]]"></managed-canvas>
-    <div class="x_axis_label" style$="[[_show(ckey)]]">[[x_label]]</div>
-    <div class="y_axis_label" style$="[[_show(ckey)]]">[[y_label]]</div>
-</template>
-
-<script>
-Polymer({
-    is: 'canvas-with-axes',
-    properties: {
-        fix_height: {
-            type: Number,
-            notify: true
-        },
-        ckey: {
-            type: Object,
-            notify: true
-        },
-        x_label: {
-            type: String,
-            notify: true
-        },
-        y_label: {
-            type: String,
-            notify: true
-        }, 
-        flip_horizontal: {
-            type: Boolean,
-            notify: true,
-            value: false
-        }
-    }, _show: function(v){
-        return v ? '' : 'display: none;';
-    }
-})
-</script>
-
-</dom-module>
