--- a/tile-element.html
+++ b/tile-element.html
@@ -2,6 +2,7 @@
 <link rel="import" href="bower_components/neon-animation/neon-animation-runner-behavior.html">
 <link rel="import" href="custom-animations.html">
 <link rel="import" href="cross-hair.html">
+<link rel="import" href="marker-element.html">
 <link rel="import" href="managed-canvas.html">
 <link rel="import" href="palettes.html">
 
@@ -195,11 +196,16 @@ pointer-events: none;
         <div class="placeholder_text">[group [[group_num]]]</div> 
     </div>
     <div class="canvas_part_1">
-        <managed-canvas ckey="[[group_model.waves]]" on-canvas-mousedown="_mousedown_splitter" fix_height="128"></managed-canvas>
-        <template is="dom-if" if="[[splitter_metrics]]">
-            <cross-hair r="6" show_bars="1" x="[[splitter_metrics.x]]" y="[[splitter_metrics.y]]" w="[[splitter_metrics.w]]"></cross-hair>
-        </template>
-        <managed-canvas ckey="[[group_model.rm.spa]]" fix_height="[[spa_rm_height]]"></managed-canvas>
+        <managed-canvas ckey="[[group_model.waves]]" on-canvas-mousedown="_mousedown_splitter" fix_height="128">
+            <template is="dom-if" if="[[splitter_metrics]]">
+                <cross-hair r="6" show_bars="1" x="[[splitter_metrics.x]]" y="[[splitter_metrics.y]]" w="[[splitter_metrics.w]]"></cross-hair>
+            </template>
+        </managed-canvas>
+        <managed-canvas ckey="[[group_model.rm.spa]]" fix_height="[[spa_rm_height]]">
+            <template is="dom-repeat" items="[[group_model.markers]]">
+                    <marker-element state="[[item]]"></marker-element>
+            </template>
+        </managed-canvas>
     </div>
     <div class="canvas_part_2">
         <div>
